Port and improve OpenStack driver from rexray v0.3.x
Notable changes :
- use cloud-init file or the metadata server to retrieve the instance uuid instead of dmidecode (kept as a fallback). dmidecode needs root so it is better to avoid it if possible.
- remove the xen-store-read executable dependency. Region parameter is optional so let's not try to guess it.
- same for the availability zone : guessing using the metadata server was wrong anyway since AZs for compute are different from AZs for volume.
- add support of trust id for keystone auth.

--- a/glide.yaml
+++ b/glide.yaml
@@ -41,6 +41,8 @@ import:
     version: v1.2.2
     repo:    https://github.com/aws/aws-sdk-go
 
+### OpenStack
+  - package: github.com/rackspace/gophercloud
 
 ################################################################################
 ##                             Build System Tools                             ##
