--- a/glide.yaml
+++ b/glide.yaml
@@ -48,6 +48,9 @@ import:
     ref:     42196eaf5b93739d335921404bb7c5f2205fceb3
     repo:    https://github.com/clintonskitson/gophercloud.git
 
+### OpenStack
+  - package: github.com/gophercloud/gophercloud
+
 ################################################################################
 ##                             Build System Tools                             ##
 ################################################################################
